--- a/Manual/HTML/css/dark-theme.css
+++ b/Manual/HTML/css/dark-theme.css
@@ -26,7 +26,7 @@ table th, table td, #main-table th, pre.diff, div.popup {
         border-right-color: rgb(80, 80, 80);
     }
 
-#logo img, .mod-icon, .icons > div.icon {
+#logo, .mod-icon, .icons > div.icon {
     filter: brightness(0.8);
 }
 
