--- a/Manual/HTML/css/font.css
+++ b/Manual/HTML/css/font.css
@@ -409,3 +409,9 @@
     font-weight: normal;
     src: url(../font/501.otf);
 }
+
+/* Used by Dot and Three-Way Gates */
+@font-face {
+    font-family: "MS Gothic";
+    src: local("MS Gothic"), url(../font/MS-Gothic-01.ttf)
+}
