--- a/Manual/HTML/css/main.css
+++ b/Manual/HTML/css/main.css
@@ -123,7 +123,7 @@ body {
         background: url('../img/web-background.jpg');
         background-attachment: fixed;
     }
-	body.dark {
+    body.dark {
         background: url('../img/web-background-dark.jpg');
     }
 }
@@ -209,6 +209,12 @@ td, th {
 table.centered {
     margin-left: auto;
     margin-right: auto;
+}
+
+p.centered,
+h5.centered, h4.centered, h3.centered, h2.centered, h1.centered,
+tr.centered {
+    text-align: center;
 }
 
 .centered-img {
